Fix button padding spacing

--- a/src/styles/tools/mixins.scss
+++ b/src/styles/tools/mixins.scss
@@ -7,7 +7,7 @@
 @mixin Button {
   min-width: 200px;
   display: inline-block;
-  padding: 15px 30px;
+  padding: 13px 30px 15px;
 
   font-family: $founders-grotesk-light;
   font-size: 16px;
